# This is part of Unidata's netCDF package.  Copyright 2011, see the
# COPYRIGHT file for more information.

# This automake file generates the Makefile to build the diskless
# library.

include $(top_srcdir)/lib_flags.am

libdiskless_la_CPPFLAGS = ${AM_CPPFLAGS}

# This is our output. The diskless convenience library.
noinst_LTLIBRARIES = libdiskless.la
libdiskless_la_SOURCES = ncddispatch.c ncddispatch.h ncdattr.c		\
ncddim.c ncdfile.c ncdgrp.c ncdtype.c ncdvar.c ncdfunc.c error4.c	\
ncdinternal.c







